# Quantitative-Strategy-Engine-QSE-

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .flake8  .gitignore  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  RESULTS_SUMMARY.md  RUN_ME.md  STRATEGIES.md  analyze_pairs_trading.py  build.sh  config.yaml  direct_test  pyproject.toml  requirements-notebooks.txt  requirements.txt  test.sh  test_debug.cpp  test_equity.csv  test_pairs_debug.cpp  test_simple.cpp  test_spearman  test_tradelog.csv
.github/workflows/: ci.yml
config/: alpha_blender_config.yaml  corporate_actions.csv  factor_strategy.yaml  factor_weights.yaml  regime_lambda.yaml
data/: raw_AAPL.csv  raw_GOOG.csv  raw_MSFT.csv  raw_SPY.csv  raw_ticks_AAPL.csv  raw_ticks_GOOG.csv  raw_ticks_MSFT.csv  raw_ticks_SPY.csv
data/regime/: SPY.csv  regime_debounce_manifest.json  regime_hmm_manifest.json  regime_manifest.json
data/universe/: AAPL.csv  ADBE.csv  AMD.csv  AMZN.csv  AVGO.csv  CRM.csv  GOOG.csv  INTC.csv  META.csv  MSFT.csv  MU.csv  NVDA.csv  ORCL.csv  QCOM.csv  TXN.csv  baseline_manifest.json  ou_manifest.json  residual_manifest.json  rolling_pca_manifest.json  signal_manifest.json  universe_manifest.json
docker/: entrypoint.sh
docs/: PROJECT_PHASES.md  TASK_BREAKDOWN.md
docs/benchmarks/: 04_arena_allocator.md  05_spsc_ring_buffer.md
docs/distributed_system/: README.md
docs/live/: README.md
docs/messaging/: README.md
docs/thesis/: limitations.md
include/: ParquetDataReader.h
notebooks/: qse_walkthrough.ipynb
notebooks/sample/: equity_curve.csv  tradelog.csv
organized_runs/test_run/: README.md
results/: equity.csv  equity_AAPL.csv  equity_GOOG.csv  equity_MSFT.csv  equity_SPY.csv  results.csv  tradelog.csv  tradelog_AAPL.csv  tradelog_GOOG.csv  tradelog_SPY.csv
scripts/: __init__.py  analyze.py  analyze_pairs_aggressive.py  analyze_pairs_data.py  build.sh  check_status.sh  download_data.py  organize_and_analyze.sh  organize_results.py  process_data.py  quick_organize.sh  quick_start.sh  quick_verify.sh  run.sh  run_all_strategies.sh  run_clang_tidy.sh  strategy_analysis_summary.py  summarize_results.sh  test.sh  test_pairs_debug.sh  verify_strategies.sh
scripts/analysis/: README.md  analyze.py  analyze_multi_run.py  analyze_multi_strategy.py  analyze_organized.py  analyze_pairs_trading.py  efficient_frontier.py  find_pairs.py  impact_study.py  onepager.py  plot_current_run.py  slippage_audit.py  statarb_audit.py  tearsheet.py  toxicity_audit.py
scripts/data/: README.md  corporate_actions.py  download_data.py  organize_plots.py  organize_results.py  process_data.py
scripts/execution/: README.md  dev_mode.sh  estimate_runtime.py  run_multi_symbol.sh
scripts/testing/: README.md  debug_crash.sh  direct_test.cpp  performance_test.sh  test.sh  test_distributed_system.sh  test_with_subset.py
src/: Backtester.cpp  Backtester.h  BarBuilder.cpp  CSVDataReader.cpp  CSVDataReader.h  Data.h  DataReader.cpp  DataReader.h  IDataReader.h  IOrderManager.h  IStrategy.h  MovingAverage.cpp  MovingAverage.h  MovingAverageCrossStrategy.h  OrderManager.cpp  OrderManager.h  ParquetDataReader.cpp  SMACrossoverStrategy.cpp  SMACrossoverStrategy.h  SimpleStrategy.h  ThreadPool.cpp  ThreadPool.h  __init__.py  direct_test.cpp  download_data.py  main.cpp  messaging_example.cpp
src/core/: Backtester.cpp  Config.cpp  ThreadPool.cpp
src/data/: BarBuilder.cpp  CSVDataReader.cpp  OrderBook.cpp  OrderBookFullDepth.cpp  ParquetDataReader.cpp  ZeroMQDataReader.cpp
src/engine/: CLI.cpp  main.cpp  multi_strategy_main.cpp  multi_symbol_main.cpp
src/exe/: AlpacaExecutionHandler.cpp  CurlHttpClient.cpp  FactorExecutionEngine.cpp
src/factor/: AlphaBlender.cpp  CrossSectionalRegression.cpp  ICMonitor.cpp  MultiFactorCalculator.cpp  PortfolioBuilder.cpp  RiskModel.cpp  UniverseFilter.cpp
src/live/: AlpacaMarketDataFeed.cpp  LiveEngine.cpp
src/messaging/: TickPublisher.cpp  TickSubscriber.cpp  tick.proto
src/order/: OrderManager.cpp
src/publisher/: main.cpp
src/strategy/: FactorStrategy.cpp  FactorStrategyConfig.cpp  FillTrackingStrategy.cpp  MovingAverage.cpp  MovingStandardDeviation.cpp  MultiFactorStrategy.cpp  PairsTradingStrategy.cpp  SMACrossoverStrategy.cpp  WeightsLoader.cpp
src/tools/: ab_audit.cpp  alpaca_smoke.cpp  arena_bench.cpp  compute_factors.cpp  factor_exec_demo.cpp  frontier_sweep.cpp  impact_sweep.cpp  live_engine.cpp  spsc_bench.cpp  spsc_tsan_stress.cpp  statarb_audit.cpp  toxicity_audit.cpp
test_data/: test_bars.csv  test_data.csv
tests/: __init__.py  create_test_data.py  test_Backtester.cpp  test_BarBuilder.cpp  test_DataReader.cpp  test_OrderManager.cpp  test_Strategy.cpp  test_ThreadPool.cpp  test_data.py
tests/cpp/: AlpacaExecutionHandlerTest.cpp  AlphaBlenderICIntegrationTest.cpp  AlphaBlenderTest.cpp  AlphaBlenderWeightPropertyTest.cpp  ArenaTest.cpp  BetaCalcTest.cpp  ConfigParseTest.cpp  CrossSectionalRegressionRobustTest.cpp  CrossSectionalRegressionTest.cpp  DataGapsTest.cpp  DeltaOrderTest.cpp  DepthFillTest.cpp  DiffCalcTest.cpp  ExecutionHandlerTest.cpp  FactorCalcTest.cpp  FactorIntegrationTest.cpp  FactorMathTest.cpp  HoldingsSnapshotTest.cpp  ICMonitorDistributionTest.cpp  ICMonitorTest.cpp  ImpactTest.cpp  LimitQueueFillTest.cpp  LiveEngineTest.cpp  MeanVarianceTest.cpp  OFITest.cpp  PortfolioBuilderTest.cpp  PriceLevelTest.cpp  QueuePositionTest.cpp  RebalanceGuardTest.cpp  RegimeLambdaTest.cpp  RiskModelMultiAssetTest.cpp  SPSCRingBufferTest.cpp  ToxicityFilterTest.cpp  UniverseFilterTest.cpp  UniverseFuzzTest.cpp  VPINTest.cpp  WeightsLoadTest.cpp  WeightsLoaderTest.cpp  test_Backtester.cpp  test_BarBuilder.cpp  (+16 more)
tests/mocks/: MockDataReader.h  MockOrderManager.h  MockStrategy.h
tests/python/: __init__.py  create_test_data.py  test_allocators.py  test_analyze.py  test_baselines.py  test_build_universe.py  test_corporate_actions.py  test_cpcv.py  test_data.py  test_deflate_qr4.py  test_deflated_sharpe.py  test_find_pairs.py  test_judge_meta.py  test_meta_model.py  test_meta_sizing.py  test_onepager.py  test_signals.py  (+14 more)
(+105 files in other folders)
